Closed
Bug 36371
Opened 25 years ago
Closed 25 years ago
Meta refresh refreshes browser even after you navigate elsewhere
Categories
(Core :: Networking, defect, P2)
Core
Networking
Tracking
()
VERIFIED
FIXED
People
(Reporter: jwbaker, Assigned: mscott)
References
()
Details
(Whiteboard: [dogfood+])
Attachments
(2 files)
294 bytes,
text/html
|
Details | |
566 bytes,
patch
|
Details | Diff | Splinter Review |
Meta refresh is being honored for pages which you are no longer viewing. This
causes Mozilla to take you away from the page you are currently viewing and back
to some page in the past. This is i686-pc-linux-gnu Build 2000041908 (M16). To
reproduce:
1: Start Mozilla
2: Visit http://cbs.marketwatch.com/
3: Visit http://www.yahoo.com/
4: Wait 300 seconds
5: Mozilla yanks you back to marketwatch
The expected behavior is that Mozilla does nothing. For your bug-hunting
enjoyment, I have distilled this bug down to a tiny attachment which has a
refresh of only 15 seconds. I will attach it next.
Reporter | ||
Comment 1•25 years ago
|
||
Comment 3•25 years ago
|
||
Confirming this on Linux build 2000.04.19.08-M16.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 5•25 years ago
|
||
this must have changed during the webshell changes. travis, the old webshell
used to cancel any outstanding refresh timers (nsIRefresh stuff). I bet that's
broken now.
Assignee: valeski → travis
Try going to : http://www.abika.com/wd
(sample page with 15-second refresh)
Then (within 15 seconds) type in http://www.mozilla.org
When the 15 seconds are up... bam! Back to the meta refresh page.
(I just figured this would be a nicer example than waiting 300 seconds at CBS
Marketwatch)
-WD
Reporter | ||
Comment 7•25 years ago
|
||
Thanks for the effort wdormann@crosswinds.net, but I created a 15-second test
and attached it when the bug was originally reported :)
http://bugzilla.mozilla.org/showattachment.cgi?attach_id=7741
Comment 8•25 years ago
|
||
cc'ing myself and radha. changing platform/OS to all - this is sooo XP. and grooving for some beta2 love.
Comment 10•25 years ago
|
||
*** Bug 36712 has been marked as a duplicate of this bug. ***
Comment 11•25 years ago
|
||
http://tinderbox.mozilla.org/seamonkey/panel.html triggers it too (maybe with a
twist according to puetzk on irc) and has <a target='_content' ..> which might
screw up some more.
Comment 12•25 years ago
|
||
Comment 13•25 years ago
|
||
*** Bug 37283 has been marked as a duplicate of this bug. ***
Comment 14•25 years ago
|
||
*** Bug 37283 has been marked as a duplicate of this bug. ***
Assignee | ||
Comment 15•25 years ago
|
||
Marking as dogfood. I keep getting bit in the ass by this bug. I have
mynetscape.com as my default home page that has a refresh of 5 minutes. Now,
when entering something like a bug report in bugzilla, if I'm writing a long
report, mynetscape gets loaded on top of my buzilla report and I lose my data.
Very frustrating..definetly dogfood.
Since Travis is out this week, I'll try to take a look and fix this myself.
Assignee | ||
Comment 16•25 years ago
|
||
I have a fix for this in my tree. I will post the patch to this bug report.
Assignee | ||
Comment 17•25 years ago
|
||
Assignee | ||
Comment 18•25 years ago
|
||
docshell was only clearing the refresh timers when a url was redirected to the
browser window. So justloading a new url in the browser wasn't clearing the
timers. I just added code to force this to happen.
Travis, I hope you don't mind bug I'm going to take this bug from you so I can
check in my fix.
Assignee: travis → mscott
Comment 19•25 years ago
|
||
thanks for fixings this, mscott. this bug has been messing me up for a while
now.
(accepting for mscott)
Status: NEW → ASSIGNED
Comment 20•25 years ago
|
||
*** Bug 37630 has been marked as a duplicate of this bug. ***
Comment 21•25 years ago
|
||
*** Bug 37631 has been marked as a duplicate of this bug. ***
Assignee | ||
Comment 22•25 years ago
|
||
This bug was driving me batty so I took it from Travis and just checked in the fix.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Comment 25•24 years ago
|
||
*** Bug 65805 has been marked as a duplicate of this bug. ***
Comment 26•24 years ago
|
||
Take a look at http://www.lifosa.com/~kaspar/framebug/frref.html
and you will wish to reopen this bug.
You need to log in
before you can comment on or make changes to this bug.
Description
•