Bug #36371 --> clear refresh timers when loading new documents into the docshell. This fixes the problem where after visiting a page with a refresh, we would later always try to refresh that page even if you had moved on.